# AgentOS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FOUNDER.md  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  Makefile  PROJECT_OVERVIEW.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  docker-compose.yml  install.ps1  install.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labels.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: architecture-proposal.yml  idea.yml  integration-request.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  labels.yml  release.yml  stale.yml
.hooks/: pre-commit  pre-push
assets/demo/: README.md
benches/: Cargo.toml
benches/benches/: bus_benchmarks.rs  memory_benchmarks.rs  vault_benchmarks.rs
crates/bus/: Cargo.toml  build.rs
crates/bus/proto/: agent_bus.proto
crates/bus/src/: auth.rs  grpc.rs  in_memory.rs  lib.rs  websocket.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  dev.rs  main.rs  marketplace.rs  repl.rs  run.rs  run_format.rs  sse_bridge.rs  state.rs  supervisor.rs
crates/cli/src/state/: backend.rs  json.rs  migrations.rs  sqlite.rs
crates/cli/tests/: cli_smoke_tests.rs  e2e_runtime_tests.rs
crates/kernel/: Cargo.toml
crates/kernel/benches/: kernel_bench.rs
crates/kernel/src/: agent.rs  circuit_breaker.rs  config.rs  error.rs  events.rs  handle.rs  health.rs  journal.rs  lib.rs  manifest.rs  metrics.rs  persistence.rs  plugins.rs  runtime_config.rs  supervisor.rs  system.rs  tools.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  lib.rs  ollama.rs  openai.rs  provider.rs  replay.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/migrations/: 001_init.sql
crates/memory/src/: embedder.rs  lib.rs  provider.rs  store.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs  runtime.rs  types.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs  registry.rs
crates/sdk/: Cargo.toml
crates/sdk/python/: README.md  pyproject.toml
crates/sdk/python/src/agentos/: __init__.py  client.py  exceptions.py  models.py  protobuf.py  session.py
crates/sdk/python/tests/: test_exceptions.py  test_models.py  test_protobuf.py  test_session.py
crates/sdk/src/: agent.rs  bus.rs  context.rs  error.rs  lib.rs  tool.rs
crates/sdk/typescript/: package-lock.json  package.json  tsconfig.json
crates/sdk/typescript/src/: builder.ts  bus.ts  client.ts  index.ts  types.ts
crates/sdk/typescript/tests/: builder.test.ts  bus.test.ts  client.test.ts  types.test.ts
crates/trace/: Cargo.toml
crates/trace/src/: diff.rs  lib.rs  persist.rs  recorder.rs  replayer.rs
crates/vault/: Cargo.toml
crates/vault/src/: encryption.rs  lib.rs  permissions.rs  vault.rs
dashboard/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  main.tsx  types.ts
dashboard/src/api/: journals.ts  sse.test.ts  sse.ts
dashboard/src/components/: AgentCard.tsx  AgentDetail.tsx  AgentList.test.tsx  AgentList.tsx  ErrorBoundary.tsx  EventStream.tsx  SessionExplorer.tsx  TimeTravelView.test.tsx  TimeTravelView.tsx  TraceTimeline.tsx
docs/: ai-development.md  architecture.md  cli-reference.md  comparison.md  contributing-guide.md  contributor-map.md  demo.md  design-decisions.md  development.md  faq.md  integration-guide.md  issue-roadmap.md  launch-plan.md  open-questions.md  pitch.md  project-glossary.md  roadmap.md  runtime-walkthrough.md  security-model.md  time-travel-debugging.md  vision.md
docs/releases/: v0.1.0-alpha.1.md  v0.1.0-alpha.md
docs/spec/: agent-protocol.md
examples/: README.md  simple_agent.toml  simple_agent.yaml
examples/autogen/: README.md  autogen_agents.py
examples/code-review/: Cargo.toml
examples/code-review/src/: main.rs
examples/crewai/: README.md  crewai_crew.py
examples/langgraph/: README.md  langgraph_agent.py
examples/python/: README.md  agent_example.py
examples/sdk/: Cargo.toml
examples/sdk/src/: main.rs
examples/typescript/: example.ts  package.json
examples/wasm-plugin/: Cargo.toml  README.md
examples/wasm-plugin/src/: lib.rs
scripts/: check.ps1  check.sh  demo-full.sh  demo.sh  publish_npm.sh  publish_pypi.py
templates/: api-server.toml  assistant-agent.toml  coding-agent.toml  data-analyst.toml  research-agent.toml  security-agent.toml  slack-bot.toml  web-scraper.toml
tests/integration_tests/: Cargo.toml
tests/integration_tests/src/: main.rs
