[workspace]
members = [
    "crates/kernel",
    "crates/bus",
    "crates/memory",
    "crates/trace",
    "crates/vault",
    "crates/registry",
    "crates/cli",
    "crates/llm",
    "crates/sdk",
    "crates/plugins",
    "benches",
    "tests/integration_tests",
    "examples/sdk",
    "examples/code-review",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WAHIB-EL-KHADIRI/agentOS"
authors = ["WAHIB EL KHADIRI <wahibmaxim@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
prost = "0.12"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-stream = "0.1"
tonic = "0.12"
parking_lot = "0.12"

[workspace.lints.rust]
unsafe_code = "deny"
missing_abi = "warn"
non_ascii_idents = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
