[package]
name = "agentos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "agentOS"
path = "src/main.rs"

[dependencies]
agentos-kernel = { path = "../kernel", version = "0.1.0" }
agentos-bus = { path = "../bus", version = "0.1.0" }
agentos-trace = { path = "../trace", version = "0.1.0" }
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
rustyline = "18"
notify = { version = "8", features = ["macos_kqueue"] }
miette = { version = "7", features = ["fancy"] }

[lints]
workspace = true
