[package]
name = "agentos-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
agentos-bus = { path = "../bus", version = "0.1.0" }
agentos-trace = { path = "../trace", version = "0.1.0" }
agentos-memory = { path = "../memory", version = "0.1.0" }
agentos-vault = { path = "../vault", version = "0.1.0" }
agentos-registry = { path = "../registry", version = "0.1.0" }
agentos-llm = { path = "../llm", version = "0.1.0" }
sha2.workspace = true
hex.workspace = true

hyper.workspace = true
async-trait.workspace = true
hyper-util = { workspace = true, features = ["server-auto"] }
http-body-util.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
futures.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "kernel_bench"
harness = false

[lints]
workspace = true
