[package]
name = "agentos-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LLM provider abstraction for AgentOS – OpenAI, Anthropic, and custom backends"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest = { version = "0.13", features = ["json", "stream"] }
futures.workspace = true
bytes = "1"

[lints]
workspace = true
