[package]
name = "agentos-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level SDK for building AgentOS agents in Rust"

[dependencies]
agentos-bus = { path = "../bus" }
agentos-kernel = { path = "../kernel" }
agentos-trace = { path = "../trace" }
agentos-vault = { path = "../vault" }
agentos-llm = { path = "../llm" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }

[lints]
workspace = true
