[package]
name = "agentos-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
tokio.workspace = true

[lints]
workspace = true
