[package]
name = "agentos-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
aes-gcm = "0.10"
rand = "0.10"
zeroize = { version = "1", features = ["derive"] }

[lints]
workspace = true
